--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -5,32 +5,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Testing">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".Activities.HomeActivity"
+    tools:showIn="@layout/app_bar_home">
 
-    <EditText
+
+    <Button
+        android:id="@+id/basics_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/str1"
-        android:layout_centerInParent="true"/>
-
-
-    <TextView
-        android:id="@+id/result_str"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/str1"
+        android:textSize="60sp"
+        android:text="Basics"
+        android:background="#FF8F00"
+        android:layout_margin="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
-        android:textSize="50sp"/>
-
+        android:onClick="OpenBasics"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/str_rev"
-        android:onClick="rev"
-        android:text="Print"
+        android:textSize="60sp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/str1"/>
+        android:text="Sample codes"
+        android:layout_below="@+id/basics_btn"
+        android:layout_margin="20dp"
+        android:onClick="OpenSampleCodes"
+        android:background="#FF8F00"/>
 
 </RelativeLayout>
