--- a/app/src/main/res/layout/activity_sample_code.xml
+++ b/app/src/main/res/layout/activity_sample_code.xml
@@ -7,7 +7,7 @@
     tools:context=".Activities.SampleCodesActivity">
 
 <android.support.v7.widget.RecyclerView
-    android:id="@+id/home_recycle"
+    android:id="@+id/sample_code_recycleView"
     android:scrollbars="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
