--- a/app/src/main/res/layout/activity_sum.xml
+++ b/app/src/main/res/layout/activity_sum.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.SumActivity">
+    tools:context=".Sample_Code_Activity.SumActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
