--- a/app/src/main/res/layout/activity_basics_activities.xml
+++ b/app/src/main/res/layout/activity_basics_activities.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,20 +7,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BasicsActivity.BasicsActivities">
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="56dp"
-        android:text="@string/title_home"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+
     <TextView
         android:id="@+id/message1"
         android:layout_width="232dp"
         android:layout_height="125dp"
-        android:layout_marginLeft="88dp"
-        android:layout_marginTop="104dp"
         android:text="@string/title_home"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,18 +27,26 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlHardcoded" />
-    </FrameLayout>
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/message3"
+        android:layout_width="232dp"
+        android:layout_height="125dp"
+        android:layout_marginLeft="88dp"
+        android:layout_marginTop="104dp"
+        android:text="@string/title_home"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlHardcoded" />
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/message4"
+            android:layout_width="191dp"
+            android:layout_height="123dp"
+            android:layout_below="@+id/message3"
+            android:text="@string/title_home"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlHardcoded" />
+
+</RelativeLayout>
