--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,27 +8,51 @@
     tools:context=".Activities.HomeActivity"
     tools:showIn="@layout/app_bar_home">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/basics_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="60sp"
-        android:text="Basics"
-        android:background="#FF8F00"
-        android:layout_margin="20dp"
-        android:layout_centerHorizontal="true"
-        android:onClick="OpenBasics"/>
+    </android.support.v7.widget.RecyclerView>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="60sp"
-        android:layout_centerHorizontal="true"
-        android:text="Sample codes"
-        android:layout_below="@+id/basics_btn"
-        android:layout_margin="20dp"
-        android:onClick="OpenSampleCodes"
-        android:background="#FF8F00"/>
+    <!--<android.support.v7.widget.CardView-->
 
-</RelativeLayout>
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_height="200dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:id="@+id/basics_btn"-->
+        <!--android:layout_margin="2dp"-->
+        <!--app:cardCornerRadius="5dp">-->
+
+        <!--<Button-->
+
+            <!--android:layout_width="200dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="#FF8F00"-->
+            <!--android:onClick="OpenBasics"-->
+            <!--android:gravity="center"-->
+            <!--android:text="Basics"-->
+            <!--android:textSize="30sp" />-->
+<!--</android.support.v7.widget.CardView>-->
+
+    <!--<android.support.v7.widget.CardView-->
+
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_height="200dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:layout_margin="2dp"-->
+        <!--android:layout_toEndOf="@+id/basics_btn"-->
+        <!--app:cardCornerRadius="5dp">-->
+
+        <!--<Button-->
+            <!--android:layout_width="200dp"-->
+            <!--android:layout_height="200dp"-->
+            <!--android:background="#FF8F00"-->
+            <!--android:onClick="OpenSampleCodes"-->
+            <!--android:gravity="center"-->
+            <!--android:text="Sample codes"-->
+            <!--android:textSize="30sp"-->
+            <!--tools:ignore="HardcodedText" />-->
+    <!--</android.support.v7.widget.CardView>-->
+</LinearLayout>
