--- a/app/src/main/res/layout/list_basics.xml
+++ b/app/src/main/res/layout/list_basics.xml
@@ -18,7 +18,9 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#000"
+        android:layout_height="1dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="#D81B60"
         android:layout_below="@+id/basics_textView"/>
 </RelativeLayout>
