--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Activities.HomeActivity"
+    android:orientation="vertical"
     tools:showIn="@layout/app_bar_home">
 
     <android.support.v7.widget.RecyclerView
@@ -13,46 +14,5 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
     </android.support.v7.widget.RecyclerView>
-
-    <!--<android.support.v7.widget.CardView-->
-
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="200dp"-->
-        <!--android:layout_weight="1"-->
-        <!--android:id="@+id/basics_btn"-->
-        <!--android:layout_margin="2dp"-->
-        <!--app:cardCornerRadius="5dp">-->
-
-        <!--<Button-->
-
-            <!--android:layout_width="200dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:background="#FF8F00"-->
-            <!--android:onClick="OpenBasics"-->
-            <!--android:gravity="center"-->
-            <!--android:text="Basics"-->
-            <!--android:textSize="30sp" />-->
-<!--</android.support.v7.widget.CardView>-->
-
-    <!--<android.support.v7.widget.CardView-->
-
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="200dp"-->
-        <!--android:layout_weight="1"-->
-        <!--android:layout_margin="2dp"-->
-        <!--android:layout_toEndOf="@+id/basics_btn"-->
-        <!--app:cardCornerRadius="5dp">-->
-
-        <!--<Button-->
-            <!--android:layout_width="200dp"-->
-            <!--android:layout_height="200dp"-->
-            <!--android:background="#FF8F00"-->
-            <!--android:onClick="OpenSampleCodes"-->
-            <!--android:gravity="center"-->
-            <!--android:text="Sample codes"-->
-            <!--android:textSize="30sp"-->
-            <!--tools:ignore="HardcodedText" />-->
-    <!--</android.support.v7.widget.CardView>-->
 </LinearLayout>
