Upgrade to androidX

--- a/app/src/main/res/layout/activity_layouts.xml
+++ b/app/src/main/res/layout/activity_layouts.xml
@@ -5,12 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".Activities.LayoutsActivity">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/layouts_recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
