--- a/app/src/main/res/layout/activity_sample_code.xml
+++ b/app/src/main/res/layout/activity_sample_code.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".Activities.SampleCodesActivity">
 
-<android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/sample_code_recycleView"
     android:scrollbars="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
