--- a/app/src/main/res/layout/activity_main_game.xml
+++ b/app/src/main/res/layout/activity_main_game.xml
@@ -7,7 +7,7 @@
     android:background="@color/backgroundColor"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -63,7 +63,7 @@
                 tools:ignore="RtlHardcoded" />
 
         </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <View
         android:layout_width="match_parent"
