--- a/app/src/main/res/layout/list_basics.xml
+++ b/app/src/main/res/layout/list_basics.xml
@@ -2,25 +2,40 @@
 <RelativeLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/basics_relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="80dp">
 
-    <TextView
-        android:id="@+id/basics_textView"
-        android:layout_width="match_parent"
-        android:layout_height="78dp"
-        android:gravity="center"
-        android:textSize="25sp"
-        android:text="mayank"
-        android:textStyle="bold"
-        />
+    <RelativeLayout
+        android:id="@+id/rel"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/basics_textView"
+            android:layout_width="300dp"
+            android:layout_height="78dp"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:text="mayank"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/basics_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_toEndOf="@+id/rel"
+        android:text="@string/app_name"
+        tools:ignore="ContentDescription" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:background="#D81B60"
-        android:layout_below="@+id/basics_textView"/>
+        android:background="#D81B60" />
 </RelativeLayout>
