--- a/app/src/main/res/layout/list_basics.xml
+++ b/app/src/main/res/layout/list_basics.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/basics_relativeLayout"
@@ -9,12 +8,12 @@
 
     <RelativeLayout
         android:id="@+id/rel"
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/basics_textView"
-            android:layout_width="300dp"
+            android:layout_width="320dp"
             android:layout_height="78dp"
             android:gravity="center"
             android:textSize="25sp"
@@ -25,17 +24,17 @@
 
     <Button
         android:id="@+id/basics_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="78dp"
+        android:layout_height="78dp"
         android:layout_toEndOf="@+id/rel"
-        android:text="@string/app_name"
+        android:background="@drawable/playbtn"
         tools:ignore="ContentDescription" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginStart="15dp"
+        android:layout_below="@+id/rel"
         android:layout_marginEnd="15dp"
         android:background="#D81B60" />
 </RelativeLayout>
