--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#42A5F5</color>
+    <color name="colorPrimaryDark">#1E88E5</color>
     <color name="colorAccent">#D81B60</color>
 
 
@@ -350,4 +350,6 @@
     <color name="red">#FF0000</color>
 
     <color name="transparent">#88000000</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
