--- a/app/src/main/res/layout/list_home.xml
+++ b/app/src/main/res/layout/list_home.xml
@@ -10,11 +10,12 @@
     <androidx.cardview.widget.CardView
 
         android:id="@+id/cardview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:cardElevation="3dp"
+        app:cardCornerRadius="5dp"
         android:layout_margin="4dp"
+        app:cardElevation="5dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -26,10 +27,15 @@
 
             <ImageView
                 android:id="@+id/ivImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
                 android:src="@drawable/image"
                 tools:ignore="ContentDescription" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#000" />
 
             <TextView
                 android:id="@+id/tvTitle"
@@ -37,7 +43,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="TextView"
-                android:textSize="18sp"
+                android:textColor="#000"
+                android:textSize="16sp"
                 android:textStyle="italic|bold"
                 tools:ignore="HardcodedText" />
             </LinearLayout>
