--- a/app/src/main/res/layout/list_overview.xml
+++ b/app/src/main/res/layout/list_overview.xml
@@ -7,12 +7,12 @@
 
     <RelativeLayout
         android:id="@+id/rel"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/basics_textView"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="78dp"
             android:gravity="center"
             android:text="mayank"
@@ -20,14 +20,6 @@
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
     </RelativeLayout>
-
-    <Button
-        android:id="@+id/basics_button"
-        android:layout_width="78dp"
-        android:layout_height="78dp"
-        android:layout_toEndOf="@+id/rel"
-        android:background="@drawable/playbtn"
-        tools:ignore="ContentDescription" />
 
     <View
         android:layout_width="match_parent"
