--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -7,6 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Activities.HomeActivity"
     android:orientation="vertical"
+    android:id="@+id/container"
     android:background="#E0F7FA"
     tools:showIn="@layout/app_bar_home">
 
@@ -18,9 +19,4 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/close_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="close" />
 </LinearLayout>
