--- a/app/src/main/res/layout/list_basics.xml
+++ b/app/src/main/res/layout/list_basics.xml
@@ -13,7 +13,7 @@
 
         <TextView
             android:id="@+id/basics_textView"
-            android:layout_width="320dp"
+            android:layout_width="350dp"
             android:layout_height="78dp"
             android:gravity="center"
             android:textSize="25sp"
@@ -24,10 +24,12 @@
 
     <Button
         android:id="@+id/basics_button"
-        android:layout_width="78dp"
-        android:layout_height="78dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_toEndOf="@+id/rel"
+        android:layout_centerInParent="true"
         android:background="@drawable/playbtn"
+        android:gravity="center"
         tools:ignore="ContentDescription" />
 
     <View
@@ -37,4 +39,5 @@
         android:layout_below="@+id/rel"
         android:layout_marginEnd="15dp"
         android:background="#D81B60" />
+
 </RelativeLayout>
